--- a/bloghome.html
+++ b/bloghome.html
@@ -52,6 +52,9 @@
       width: 80%;
       max-width: 1200px;
     }
+.box a {
+    text-decoration: none; /* Removes underline from the link */
+}
 
     /* Intro Section */
     .intro {
