--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <h1>Welcome to Soham Takuri's Space</h1>
         <p class="typewriter">Exploring AI, finance, crypto and human decision-making.</p>
         <div class="links">
-            <a href="/https://sohamtme.tiiny.site/">Resume</a>
+            <a href="https://sohamtme.tiiny.site/">Resume</a>
             <a href="/bloghome.html">Blog</a>
             <a href="/casestudies.html">Case Studies</a>
             <a href="/movies.html">Movies</a>
