--- a/bloghome.html
+++ b/bloghome.html
@@ -204,6 +204,74 @@
     .box:nth-child(3) {
       animation-delay: 0.3s;
     }
+    
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  /* Responsive Design */
+  @media (max-width: 768px) {
+    .intro h1 {
+      font-size: 28px;
+    }
+
+    .follow-button {
+      padding: 10px 20px;
+      font-size: 14px;
+    }
+
+    .email-input {
+      width: 180px;
+    }
+
+    .box img {
+      width: 60px;
+      height: 60px;
+    }
+
+    .box h2 {
+      font-size: 18px;
+    }
+
+    .box .subtitle {
+      font-size: 12px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .intro h1 {
+      font-size: 24px;
+    }
+
+    .typewriter {
+      font-size: 1rem;
+    }
+
+    .box {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .box img {
+      width: 50px;
+      height: 50px;
+      margin: 0 0 10px;
+    }
+
+    .box h2 {
+      font-size: 16px;
+    }
+
+    .box .subtitle,
+    .box .date {
+      font-size: 10px;
+    }
+  }
   </style>
 </head>
 <body>
