--- a/movies.html
+++ b/movies.html
@@ -117,7 +117,11 @@
       opacity: 0;
       animation: fadeIn 1s forwards;
     }
-
+    .box a {
+  display: block; /* Makes the entire box clickable */
+  text-decoration: none; /* Removes underline from the text */
+  color: inherit; /* Maintains the color of the text */
+}
     .box:hover {
       transform: scale(1.05);
       background-color: #2c2c2c;
@@ -303,7 +307,7 @@
 
       <div class="box-content">
         <h2>#1 Inception</h2>
-      </a></div>
+     </div> </a>
     </div>
 
     <div class="box">
