--- a/movies.html
+++ b/movies.html
@@ -105,7 +105,7 @@
     /* Blog Post Boxes */
     .box {
       background-color: #1e1e1e;
-      width: 25%;
+      width: 50%;
       margin: 10px 0;
       padding: 20px;
       border-radius: 15px;
@@ -307,7 +307,7 @@
 
       <div class="box-content">
         <h2>#1 Inception</h2>
-     </div> </a>
+     </a></div> 
     </div>
 
     <div class="box">
