--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
         <p class="typewriter">Exploring AI, finance, crypto and human decision-making.</p>
         <div class="links">
             <a href="https://sohamtme.tiiny.site/">Resume</a>
+            <a href="/research">Research</a>
+
             <a href="/bloghome.html">Blog</a>
             <a href="/casestudies.html">Case Studies</a>
             <a href="/movies.html">Movies</a>
