--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <h1>Welcome to Soham Takuri's Space</h1>
         <p class="typewriter">Exploring AI, finance, crypto and human decision-making.</p>
         <div class="links">
-            <a href="https://sohamtme.tiiny.site/">Resume</a>
+            <a href="https://arxiv.org/abs/2503.11656">Resume</a>
             <a href="/research">Research</a>
 
             <a href="/bloghome.html">Blog</a>
